Update video conference link and disclaimer text
Updated the link for joining the video conference and modified the disclaimer text for clarity.

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 </div>
                 <div class="col-md-6 text-center">
                     <p class="mb-4">Patients: Use the link from your confirmation email.<br>Providers: Log in to your room.</p>
-                    <a href="https://doxy.me/your-room-name" class="btn btn-primary btn-lg px-5 py-3" target="_blank">Join Video Conference</a>
+                    <a href="https://doxy.me/biotechventures" class="btn btn-primary btn-lg px-5 py-3" target="_blank">Join Video Conference</a>
                 </div>
             </div>
         </div>
@@ -208,7 +208,7 @@
     <!-- Footer Disclaimer -->
     <footer class="bg-dark text-white py-5">
         <div class="container text-center">
-            <p><strong>Disclaimer:</strong> Not medical advice. Prescription required after provider approval. Compounded medications from DEA licensed U.S. compounding pharmacies. Results vary. Biotech Ventures is a telemedicine platform partnering with licensed providers.</p>
+            <p><strong>Disclaimer:</strong> Not medical advice. Prescription required after provider approval. Compounded medications are from a DEA licensed U.S. compounding pharmacies. Results vary. Biotech Ventures is a telemedicine platform partnering with licensed providers.</p>
             <p>&copy; 2025 Biotech Ventures. All rights reserved.</p>
         </div>
     </footer>
