--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         .btn-primary { background-color: #00aaff; border: none; }
         .btn-primary:hover { background-color: #0088cc; }
         .icon-large { font-size: 3rem; color: #00aaff; margin-bottom: 20px; }
+        .pay-button { background-color: #00aaff; color: white; font-size: 1.5rem; padding: 18px 50px; border-radius: 50px; }
+        .pay-button:hover { background-color: #0088cc; }
     </style>
 </head>
 <body>
@@ -44,13 +46,17 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
+    <!-- Hero Section (Stripe Pay Gate Button Here) -->
     <section class="hero text-center">
         <div class="container">
             <h1 class="display-3 fw-bold">Your Path to Better Health Starts Here</h1>
             <p class="lead fs-2">GLP-1 Weight Management Starting at <span class="price-highlight">$299/month</span></p>
             <p class="lead">All-inclusive: initial consultation, medication, follow-up consults for refills, and discreet shipping. Personalized care from home – no insurance needed.</p>
-            <a href="#video-conference" class="btn btn-light btn-lg mt-4 px-5 py-3">Join Video Consultation</a>
+            <!-- Stripe Pay Gate – Replace with your Stripe Checkout/Payment Link -->
+            <a href="YOUR_STRIPE_CHECKOUT_LINK_HERE" class="btn pay-button btn-lg mt-4" target="_blank">
+                Enroll Now – $299/month
+            </a>
+            <p class="mt-3 text-white-50">Secure payment via Stripe. Cancel anytime.</p>
         </div>
     </section>
 
@@ -155,7 +161,7 @@
         </div>
     </section>
 
-    <!-- Video Conference Section (Kept Prominent) -->
+    <!-- Video Conference Section -->
     <section id="video-conference">
         <div class="container">
             <h2 class="text-center mb-5">Secure Video Conferences with Providers</h2>
@@ -167,6 +173,7 @@
                 <div class="col-md-6 text-center">
                     <p class="mb-4">Patients: Use the link from your confirmation email.<br>Providers: Log in to your room.</p>
                     <a href="https://doxy.me/biotechventures" class="btn btn-primary btn-lg px-5 py-3" target="_blank">Join Video Conference</a>
+                    <p class="mt-3 text-muted">Access available after program enrollment.</p>
                 </div>
             </div>
         </div>
@@ -208,7 +215,7 @@
     <!-- Footer Disclaimer -->
     <footer class="bg-dark text-white py-5">
         <div class="container text-center">
-            <p><strong>Disclaimer:</strong> Not medical advice. Prescription required after provider approval. Compounded medications are from a DEA licensed U.S. compounding pharmacies. Results vary. Biotech Ventures is a telemedicine platform partnering with licensed providers.</p>
+            <p><strong>Disclaimer:</strong> Not medical advice. Prescription required after provider approval. Compounded medications from DEA licensed U.S. compounding pharmacies. Results vary. Biotech Ventures is a telemedicine platform partnering with licensed providers.</p>
             <p>&copy; 2025 Biotech Ventures. All rights reserved.</p>
         </div>
     </footer>
